fix - CGU visible html + css

--- a/src/app/sign/register/register.component.scss
+++ b/src/app/sign/register/register.component.scss
@@ -4,3 +4,6 @@
   background: #e0e0e038;
   cursor: pointer;
 }
+a {
+  cursor: pointer;
+}
